render circle out of texture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${project_SOURCE_DIR}/cmake")
 
 project(graphs VERSION 1.0)
 
-add_executable(graphs src/main.cpp)
+add_executable(graphs src/main.cpp src/graph.cpp src/geometry.cpp)
+add_executable(test src/test.cpp)
 
 target_include_directories(graphs PUBLIC include/)
 
@@ -13,3 +14,4 @@ find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIR})
 
 target_link_libraries(graphs ${SDL2_LIBRARIES})
+target_link_libraries(test ${SDL2_LIBRARIES})
