--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cmake.configureOnOpen": true
+  "cmake.configureOnOpen": true,
+  "C_Cpp.errorSquiggles": "Disabled",
+  "files.associations": {
+    "cstdio": "cpp",
+    "cstring": "cpp",
+    "climits": "cpp",
+    "cmath": "cpp"
+  }
 }
